--- a/estilos/estilo_cv.css
+++ b/estilos/estilo_cv.css
@@ -13,7 +13,7 @@
   }
 
   * {/*fonts*/
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto Mono', monospace;  
     font-size: 11;
     box-sizing: borderbox;
   }
@@ -65,6 +65,8 @@ h3 { text-align: left}
   /* div invisible que cuenta lo que hice */
 #infopag {
   display: none;
+  position: fixed;
+  top:0;
   background-color: rgb(0, 39, 0);
   color:gold;
   }
@@ -352,20 +354,13 @@ footer {
   }
 
   /* ----------------------------------------------------------------------------------------------certificado ficticio */
-
   .certbody{
     background-color:rgb(255, 174, 0);
     text-align:center;
   }
 
   .certcuerpo{
-    /* display: table-cell;
-    align : center; 
-    padding: 0% 5% 0% 5%;
-    margin: 5 px;
-    width: 80%;
-    text-align: center;
-    vertical-align: top; */
+    background-color:rgb(0, 110, 255);
     text-align:colcontainer;
     margin-top: 50px;
     margin-left: auto;
